--- a/MultiAccountStrategy/backTestingWithChatGPT.ipynb
+++ b/MultiAccountStrategy/backTestingWithChatGPT.ipynb
@@ -554,6 +554,37 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "def percent_change_strategy(base_col, n_pct):\n",
+        "    base_price = None\n",
+        "    \n",
+        "    def strategy(row):\n",
+        "        prices = row.values\n",
+        "        nonlocal base_price\n",
+        "        if base_price is None:\n",
+        "            base_price = prices[base_col]\n",
+        "        signal = 0\n",
+        "        \n",
+        "        for i in range(1, len(prices)):\n",
+        "            if prices[base_col] >= base_price * (1 + n_pct/100):\n",
+        "                signal = 2  # Buy signal\n",
+        "                base_price = prices[base_col]\n",
+        "            elif prices[base_col] <= base_price * (1 - n_pct/100):\n",
+        "                signal = 1  # Sell signal\n",
+        "                base_price = prices[base_col]\n",
+        "        \n",
+        "        return signal\n",
+        "    \n",
+        "    return strategy\n"
+      ],
+      "metadata": {
+        "id": "-vQhzbw_awTx"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "brTWiXbvOTxb"
@@ -609,7 +640,7 @@
         "    #     budget = round(x[i].value(), 2)\n",
         "    #     cost = round(budget * unit_costs[i], 2)\n",
         "    #     print(f\"Task {i+1}: budget = {budget}, cost = {cost}\")\n",
-        "    return [x[i].value() for i in range(num_tasks)]\n",
+        "    return [int(x[i].value()) for i in range(num_tasks)]\n",
         "\n"
       ]
     },
@@ -873,13 +904,306 @@
       "source": [
         "basePriceDf.head(10)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "yXHQJ6eZe55B"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "dGMMAsk9fTBp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### TEST SECTION"
+      ],
+      "metadata": {
+        "id": "_fKaKuJDfUKu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "dates = pd.date_range('2022-01-01', periods=10)\n",
+        "prices = pd.DataFrame({\n",
+        "    'stock1': [10, 12, 15, 14, 13, 12, 13, 15, 16, 17],\n",
+        "    'stock2': [20, 22, 25, 24, 23, 22, 23, 25, 26, 27]\n",
+        "}, index=dates)"
+      ],
+      "metadata": {
+        "id": "Ki7uWf43fWaZ"
+      },
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "prices"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 363
+        },
+        "id": "JWpmK0Rtfh04",
+        "outputId": "c92df5ef-f937-4558-c1c4-e89b1e1b6c29"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "            stock1  stock2\n",
+              "2022-01-01      10      20\n",
+              "2022-01-02      12      22\n",
+              "2022-01-03      15      25\n",
+              "2022-01-04      14      24\n",
+              "2022-01-05      13      23\n",
+              "2022-01-06      12      22\n",
+              "2022-01-07      13      23\n",
+              "2022-01-08      15      25\n",
+              "2022-01-09      16      26\n",
+              "2022-01-10      17      27"
+            ],
+            "text/html": [
+              "\n",
+              "  <div id=\"df-ab645ab7-b73f-427b-943a-137697f5b063\">\n",
+              "    <div class=\"colab-df-container\">\n",
+              "      <div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>stock1</th>\n",
+              "      <th>stock2</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>2022-01-01</th>\n",
+              "      <td>10</td>\n",
+              "      <td>20</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-02</th>\n",
+              "      <td>12</td>\n",
+              "      <td>22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-03</th>\n",
+              "      <td>15</td>\n",
+              "      <td>25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-04</th>\n",
+              "      <td>14</td>\n",
+              "      <td>24</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-05</th>\n",
+              "      <td>13</td>\n",
+              "      <td>23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-06</th>\n",
+              "      <td>12</td>\n",
+              "      <td>22</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-07</th>\n",
+              "      <td>13</td>\n",
+              "      <td>23</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-08</th>\n",
+              "      <td>15</td>\n",
+              "      <td>25</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-09</th>\n",
+              "      <td>16</td>\n",
+              "      <td>26</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2022-01-10</th>\n",
+              "      <td>17</td>\n",
+              "      <td>27</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>\n",
+              "      <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-ab645ab7-b73f-427b-943a-137697f5b063')\"\n",
+              "              title=\"Convert this dataframe to an interactive table.\"\n",
+              "              style=\"display:none;\">\n",
+              "        \n",
+              "  <svg xmlns=\"http://www.w3.org/2000/svg\" height=\"24px\"viewBox=\"0 0 24 24\"\n",
+              "       width=\"24px\">\n",
+              "    <path d=\"M0 0h24v24H0V0z\" fill=\"none\"/>\n",
+              "    <path d=\"M18.56 5.44l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94zm-11 1L8.5 8.5l.94-2.06 2.06-.94-2.06-.94L8.5 2.5l-.94 2.06-2.06.94zm10 10l.94 2.06.94-2.06 2.06-.94-2.06-.94-.94-2.06-.94 2.06-2.06.94z\"/><path d=\"M17.41 7.96l-1.37-1.37c-.4-.4-.92-.59-1.43-.59-.52 0-1.04.2-1.43.59L10.3 9.45l-7.72 7.72c-.78.78-.78 2.05 0 2.83L4 21.41c.39.39.9.59 1.41.59.51 0 1.02-.2 1.41-.59l7.78-7.78 2.81-2.81c.8-.78.8-2.07 0-2.86zM5.41 20L4 18.59l7.72-7.72 1.47 1.35L5.41 20z\"/>\n",
+              "  </svg>\n",
+              "      </button>\n",
+              "      \n",
+              "  <style>\n",
+              "    .colab-df-container {\n",
+              "      display:flex;\n",
+              "      flex-wrap:wrap;\n",
+              "      gap: 12px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert {\n",
+              "      background-color: #E8F0FE;\n",
+              "      border: none;\n",
+              "      border-radius: 50%;\n",
+              "      cursor: pointer;\n",
+              "      display: none;\n",
+              "      fill: #1967D2;\n",
+              "      height: 32px;\n",
+              "      padding: 0 0 0 0;\n",
+              "      width: 32px;\n",
+              "    }\n",
+              "\n",
+              "    .colab-df-convert:hover {\n",
+              "      background-color: #E2EBFA;\n",
+              "      box-shadow: 0px 1px 2px rgba(60, 64, 67, 0.3), 0px 1px 3px 1px rgba(60, 64, 67, 0.15);\n",
+              "      fill: #174EA6;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert {\n",
+              "      background-color: #3B4455;\n",
+              "      fill: #D2E3FC;\n",
+              "    }\n",
+              "\n",
+              "    [theme=dark] .colab-df-convert:hover {\n",
+              "      background-color: #434B5C;\n",
+              "      box-shadow: 0px 1px 3px 1px rgba(0, 0, 0, 0.15);\n",
+              "      filter: drop-shadow(0px 1px 2px rgba(0, 0, 0, 0.3));\n",
+              "      fill: #FFFFFF;\n",
+              "    }\n",
+              "  </style>\n",
+              "\n",
+              "      <script>\n",
+              "        const buttonEl =\n",
+              "          document.querySelector('#df-ab645ab7-b73f-427b-943a-137697f5b063 button.colab-df-convert');\n",
+              "        buttonEl.style.display =\n",
+              "          google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
+              "\n",
+              "        async function convertToInteractive(key) {\n",
+              "          const element = document.querySelector('#df-ab645ab7-b73f-427b-943a-137697f5b063');\n",
+              "          const dataTable =\n",
+              "            await google.colab.kernel.invokeFunction('convertToInteractive',\n",
+              "                                                     [key], {});\n",
+              "          if (!dataTable) return;\n",
+              "\n",
+              "          const docLinkHtml = 'Like what you see? Visit the ' +\n",
+              "            '<a target=\"_blank\" href=https://colab.research.google.com/notebooks/data_table.ipynb>data table notebook</a>'\n",
+              "            + ' to learn more about interactive tables.';\n",
+              "          element.innerHTML = '';\n",
+              "          dataTable['output_type'] = 'display_data';\n",
+              "          await google.colab.output.renderOutput(dataTable, element);\n",
+              "          const docLink = document.createElement('div');\n",
+              "          docLink.innerHTML = docLinkHtml;\n",
+              "          element.appendChild(docLink);\n",
+              "        }\n",
+              "      </script>\n",
+              "    </div>\n",
+              "  </div>\n",
+              "  "
+            ]
+          },
+          "metadata": {},
+          "execution_count": 8
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "strategy = percent_change_strategy(0, 10)\n",
+        "signals = prices.apply(strategy, axis=1)"
+      ],
+      "metadata": {
+        "id": "BOPqqgw-fXU-"
+      },
+      "execution_count": 26,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "signals"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "p0N7rqutggPM",
+        "outputId": "49a24fda-f476-4c20-f842-b87660a79d73"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2022-01-01    0\n",
+              "2022-01-02    2\n",
+              "2022-01-03    2\n",
+              "2022-01-04    0\n",
+              "2022-01-05    1\n",
+              "2022-01-06    0\n",
+              "2022-01-07    0\n",
+              "2022-01-08    2\n",
+              "2022-01-09    0\n",
+              "2022-01-10    2\n",
+              "Freq: D, dtype: int64"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 27
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "jmZfDl-ojOVq"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
     "colab": {
       "provenance": [],
       "mount_file_id": "1iITq7QQgeLUO27Xm7g-PT6CAwd6DUYzA",
-      "authorship_tag": "ABX9TyPKYKYH78lFeTCMp7BXAyy+",
+      "authorship_tag": "ABX9TyPZtcY8qxOF+wOeGiX5G7C9",
       "include_colab_link": true
     },
     "kernelspec": {
